@@ -68,13 +68,8 @@ optionally using MathML.
 <p>To convert a LaTeX source file.tex to HTML5 that uses UTF-8:
 
 <pre>
-htlatex file.tex "xhtml,html5,charset=utf-8" " -cunihtf -utf8"
+make4ht file.tex
 </pre>
-
-<p>N.B. That command line has three arguments, the second two given
-inside shell quotes; the last argument starts with a space. <a
-href="applications/tex4ht/mn-commands.html">More details on calling
-conventions</a>.
 
 <p>For more comprehensible invocations, see <a
 href="https://ctan.org/pkg/make4ht">make4ht</a> above.
