@@ -1,3 +1,7 @@
+2020-05-28  Michal Hoftich  <michal.h21@gmail.com>
+
+	* index.html: use make4ht instead of htlatex.
+
 2019-06-24  Karl Berry  <karl@freefriends.org>
 
 	* index.html: wording, tweak changelog format
